--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ngx-lightbox": "^1.0.2",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
