--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.1",
-    "@angular/common": "^7.2.1",
-    "@angular/compiler": "^7.2.1",
-    "@angular/core": "^7.2.1",
-    "@angular/forms": "^7.2.1",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
     "@angular/http": "^7.2.1",
-    "@angular/platform-browser": "^7.2.1",
-    "@angular/platform-browser-dynamic": "^7.2.1",
-    "@angular/router": "^7.2.1",
-    "bootstrap": "^4.1.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ngx-lightbox": "^1.0.2",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.28",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "^7.2.2",
-    "@angular/compiler-cli": "^7.2.1",
-    "@angular/language-service": "^7.2.1",
+    "@angular-devkit/build-angular": "~0.800.2",
+    "@angular/cli": "^8.0.2",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -51,6 +51,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "typescript": "~3.4.5"
   }
 }
