--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
     "jquery": "^3.4.1",
-    "ngx-lightbox": "^1.0.2",
+    "lightbox": "^0.5.0",
+    "ngx-lightbox": "^2.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.5.2",
